--- a/parts/cvs/cvsoptionswidgetbase.ui
+++ b/parts/cvs/cvsoptionswidgetbase.ui
@@ -2,7 +2,7 @@
 <class>CvsOptionsWidgetBase</class>
 <widget class="QWidget">
     <property name="name">
-        <cstring>CvsOptionsWidget</cstring>
+        <cstring>cvsOptionsWidget</cstring>
     </property>
     <property name="geometry">
         <rect>
