--- a/parts/cppsupport/cppnewclassdlgbase.ui
+++ b/parts/cppsupport/cppnewclassdlgbase.ui
@@ -204,7 +204,7 @@ a class for the KDE libraries.</string>
                                     </sizepolicy>
                                 </property>
                                 <property name="text">
-                                    <string>N&amp;amespace:</string>
+                                    <string>Name&amp;space:</string>
                                 </property>
                                 <property name="buddy" stdset="0">
                                     <cstring>namespace_edit</cstring>
@@ -253,7 +253,7 @@ Namespace1::Namespace2::...::NamespaceN</string>
                                     </size>
                                 </property>
                                 <property name="text">
-                                    <string>&amp;Add</string>
+                                    <string>A&amp;dd</string>
                                 </property>
                                 <property name="autoDefault">
                                     <bool>false</bool>
@@ -584,7 +584,7 @@ Namespace1::Namespace2::...::NamespaceN</string>
                                     <cstring>filetemplate_box</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>&amp;Use file templates</string>
+                                    <string>Use file &amp;templates</string>
                                 </property>
                                 <property name="checked">
                                     <bool>true</bool>
@@ -611,7 +611,7 @@ Namespace1::Namespace2::...::NamespaceN</string>
                                     <cstring>gtk_box</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>&amp;Generate GTK+ Class</string>
+                                    <string>Generate G&amp;TK+ Class</string>
                                 </property>
                             </widget>
                             <widget class="QCheckBox">
