Added "add as binary" function and some bugfixes.

--- a/parts/cvsservice/cvsformbase.ui
+++ b/parts/cvsservice/cvsformbase.ui
@@ -1,16 +1,16 @@
 <!DOCTYPE UI><UI version="3.1" stdsetdef="1">
-<class>CvsForm</class>
+<class>CvsFormBase</class>
 <author>Yann Hodique</author>
 <widget class="QWidget">
     <property name="name">
-        <cstring>CvsForm</cstring>
+        <cstring>CvsFormBase</cstring>
     </property>
     <property name="geometry">
         <rect>
             <x>0</x>
             <y>0</y>
             <width>603</width>
-            <height>476</height>
+            <height>623</height>
         </rect>
     </property>
     <property name="caption">
@@ -24,8 +24,7 @@ for your new project</string>
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
-        <widget class="QLabel" row="6" column="0">
+        <widget class="QLabel" row="5" column="0">
             <property name="name">
                 <cstring>TextLabel5</cstring>
             </property>
@@ -39,20 +38,9 @@ for your new project</string>
                 <string>Release tag:</string>
             </property>
         </widget>
-        <widget class="QLineEdit" row="6" column="1">
+        <widget class="QLineEdit" row="2" column="1" rowspan="1" colspan="3">
             <property name="name">
-                <cstring>release_edit</cstring>
-            </property>
-            <property name="text">
-                <string>start</string>
-            </property>
-            <property name="toolTip" stdset="0">
-                <string>Tag that will be associated with initial state</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit" row="3" column="1">
-            <property name="name">
-                <cstring>repository_edit</cstring>
+                <cstring>module_edit</cstring>
             </property>
             <property name="toolTip" stdset="0">
                 <string>Enter the name of the repository</string>
@@ -62,7 +50,7 @@ for your new project</string>
 Most of the thime you'll just reuse the project name</string>
             </property>
         </widget>
-        <widget class="QLineEdit" row="4" column="1">
+        <widget class="QLineEdit" row="3" column="1" rowspan="1" colspan="3">
             <property name="name">
                 <cstring>vendor_edit</cstring>
             </property>
@@ -73,7 +61,31 @@ Most of the thime you'll just reuse the project name</string>
                 <string>Enter the vendor name</string>
             </property>
         </widget>
-        <widget class="QLineEdit" row="5" column="1">
+        <widget class="QLabel" row="4" column="0">
+            <property name="name">
+                <cstring>TextLabel3</cstring>
+            </property>
+            <property name="text">
+                <string>Message:</string>
+            </property>
+        </widget>
+        <widget class="QLabel" row="2" column="0">
+            <property name="name">
+                <cstring>TextLabel2</cstring>
+            </property>
+            <property name="text">
+                <string>Module</string>
+            </property>
+        </widget>
+        <widget class="QLabel" row="3" column="0">
+            <property name="name">
+                <cstring>TextLabel4</cstring>
+            </property>
+            <property name="text">
+                <string>Vendor tag:</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit" row="4" column="1" rowspan="1" colspan="3">
             <property name="name">
                 <cstring>message_edit</cstring>
             </property>
@@ -84,28 +96,15 @@ Most of the thime you'll just reuse the project name</string>
                 <string>Repository creation message</string>
             </property>
         </widget>
-        <widget class="QLabel" row="5" column="0">
+        <widget class="QLineEdit" row="5" column="1" rowspan="1" colspan="3">
             <property name="name">
-                <cstring>TextLabel3</cstring>
+                <cstring>release_edit</cstring>
             </property>
             <property name="text">
-                <string>Message:</string>
+                <string>start</string>
             </property>
-        </widget>
-        <widget class="QLabel" row="3" column="0">
-            <property name="name">
-                <cstring>TextLabel2</cstring>
-            </property>
-            <property name="text">
-                <string>CVS repository:</string>
-            </property>
-        </widget>
-        <widget class="QLabel" row="4" column="0">
-            <property name="name">
-                <cstring>TextLabel4</cstring>
-            </property>
-            <property name="text">
-                <string>Vendor tag:</string>
+            <property name="toolTip" stdset="0">
+                <string>Tag that will be associated with initial state</string>
             </property>
         </widget>
         <widget class="QLabel" row="0" column="0">
@@ -119,12 +118,12 @@ Most of the thime you'll just reuse the project name</string>
                 <enum>Plain</enum>
             </property>
             <property name="text">
-                <string>CVS root:</string>
+                <string>Server path</string>
             </property>
         </widget>
-        <widget class="QLineEdit" row="0" column="1">
+        <widget class="QLineEdit" row="0" column="1" rowspan="1" colspan="3">
             <property name="name">
-                <cstring>root_edit</cstring>
+                <cstring>serverPathEdit</cstring>
             </property>
             <property name="toolTip" stdset="0">
                 <string>Enter your CVS Root location</string>
@@ -134,29 +133,7 @@ Most of the thime you'll just reuse the project name</string>
 e.g. &lt;tt&gt;/home/cvsroot&lt;/tt&gt; or &lt;tt&gt;:pserver:me@localhost:/home/cvs&lt;/tt&gt;</string>
             </property>
         </widget>
-        <widget class="QCheckBox" row="1" column="1">
-            <property name="name">
-                <cstring>init_check</cstring>
-            </property>
-            <property name="text">
-                <string>Init root</string>
-            </property>
-            <property name="toolTip" stdset="0">
-                <string>Check if you defined a new CVS Root</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit" row="2" column="1">
-            <property name="name">
-                <cstring>cvs_rsh</cstring>
-            </property>
-            <property name="toolTip" stdset="0">
-                <string>If you are using SSH to access the repository fill this field</string>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>CVS access type (&lt;tt&gt;ssh&lt;/tt&gt; for example)</string>
-            </property>
-        </widget>
-        <widget class="QLabel" row="2" column="0">
+        <widget class="QLabel" row="1" column="0">
             <property name="name">
                 <cstring>TextLabel1_2</cstring>
             </property>
@@ -170,26 +147,62 @@ e.g. &lt;tt&gt;/home/cvsroot&lt;/tt&gt; or &lt;tt&gt;:pserver:me@localhost:/home
                 <string>CVS_RSH</string>
             </property>
         </widget>
+        <widget class="QComboBox" row="1" column="1">
+            <item>
+                <property name="text">
+                    <string></string>
+                </property>
+            </item>
+            <item>
+                <property name="text">
+                    <string>ssh</string>
+                </property>
+            </item>
+            <property name="name">
+                <cstring>cvsRshComboBox</cstring>
+            </property>
+        </widget>
+        <widget class="QCheckBox" row="1" column="3">
+            <property name="name">
+                <cstring>init_check</cstring>
+            </property>
+            <property name="text">
+                <string>Init root</string>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string>Check if you defined a new CVS Root</string>
+            </property>
+        </widget>
+        <spacer row="1" column="2">
+            <property name="name">
+                <cstring>spacer1</cstring>
+            </property>
+            <property name="orientation">
+                <enum>Horizontal</enum>
+            </property>
+            <property name="sizeType">
+                <enum>Preferred</enum>
+            </property>
+            <property name="sizeHint">
+                <size>
+                    <width>51</width>
+                    <height>20</height>
+                </size>
+            </property>
+        </spacer>
     </grid>
 </widget>
 <tabstops>
-    <tabstop>root_edit</tabstop>
+    <tabstop>serverPathEdit</tabstop>
     <tabstop>init_check</tabstop>
-    <tabstop>cvs_rsh</tabstop>
-    <tabstop>repository_edit</tabstop>
+    <tabstop>module_edit</tabstop>
     <tabstop>vendor_edit</tabstop>
     <tabstop>message_edit</tabstop>
     <tabstop>release_edit</tabstop>
 </tabstops>
 <includes>
-    <include location="local" impldecl="in implementation">cvsform.ui.h</include>
     <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
-<slots>
-    <slot>init()</slot>
-    <slot>destroy()</slot>
-</slots>
-
 </UI>
